# Turtlebot3_Problems

./: README.md  frames.gv
devel/: .catkin
devel/lib/bumperbot_controller/: noisy_controller_node  simple_controller_node
devel/lib/bumperbot_examples/: simple_cpp_service_client  simple_cpp_service_server  simple_cpp_subscriber  simple_cpp_timer  tf_examples_node  turtlesim_kinematics_node
devel/lib/bumperbot_localization/: kalman_filter_node  kalman_filter_node.py
devel/lib/bumperbot_perception/: point_cloud_node
devel/lib/pkgconfig/: bumperbot_controller.pc  bumperbot_description.pc  bumperbot_examples.pc  bumperbot_localization.pc  bumperbot_perception.pc
devel/lib/python3/dist-packages/bumperbot_controller/: __init__.py
devel/share/bumperbot_controller/cmake/: bumperbot_controllerConfig.cmake
devel/share/bumperbot_description/cmake/: bumperbot_descriptionConfig.cmake
devel/share/bumperbot_examples/cmake/: bumperbot_examples-msg-extras.cmake  bumperbot_examplesConfig.cmake
devel/share/bumperbot_localization/cmake/: bumperbot_localizationConfig.cmake
devel/share/bumperbot_perception/cmake/: bumperbot_perceptionConfig.cmake
devel/share/roseus/ros/bumperbot_examples/: manifest.l
src/bumperbot_description/launch/: gazebo.launch
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  camera_sensor.xacro  lidar.xacro
src/bumperbot_description/worlds/: bumper.world  myworld.world
src/bumperbot_examples/: CMakeLists.txt
src/bumperbot_perception/: CMakeLists.txt  package.xml
src/bumperbot_perception/src/: opencv.cpp  point_cloud_filter_node.cpp
(+2 files in other folders)
